<resources>
    <string name="app_name">Philogram</string>
    <string name="login_id_hint">아이디 입력</string>
    <string name="login_pw_hint">비밀번호 입력</string>
    <string name="login_login_btn">로그인</string>
    <string name="login_login_success_toast">로그인 성공!</string>
    <string name="login_login_fail_toast">아이디 또는 비밀번호가 잘못되었습니다.</string>
    <string name="login_re_pw_txt">비밀번호를 잊으셨나요?</string>
    <string name="login_signup_txt">계정이 없으신가요? 가입하기</string>
    <string name="login_find_problem_txt">로그인에 문제가 있나요?</string>
    <string name="login_find_id_hint">ID를 입력해주세요.</string>
    <string name="login_find_re_pw_btn">비밀번호 재설정</string>
    <string name="login_find_back_login_txt">로그인으로 돌아가기</string>
    <string name="login_find_new_pw_hint">새 비밀번호 입력</string>
    <string name="login_find_new_pw_btn">비밀번호 변경</string>
    <string name="login_find_no_equals_id_toast">일치하는 아이디가 없습니다.</string>
    <string name="login_find_change_pw_toast">비밀번호가 변경되었습니다.</string>
    <string name="signup_id_hint">아이디</string>
    <string name="signup_pw_hint">비밀번호</string>
    <string name="signup_name_hint">성명</string>
    <string name="signup_nickname_hint">사용자 이름</string>
    <string name="signup_signup_btn">회원가입</string>
    <string name="signup_no_enter_info_toast">입력하지 않은 정보가 있습니다.</string>
    <string name="signup_exist_id_toast">이미 존재하는 아이디입니다.</string>
    <string name="signup_signup_success">회원가입 성공!</string>
    <string name="main_login_txt">로그인 해주세요!</string>
    <string name="main_welcome">님, 환영합니다!</string>
    <string name="detail_post_txt">Post</string>
    <string name="detail_view_txt">View</string>
    <string name="detail_username_txt">사용자 이름</string>
    <string name="detail_nation_txt">국적</string>
    <string name="detail_intro_txt">소개글</string>
    <string name="dialog_logout_txt">로그아웃 하시겠습니까?</string>
    <string name="dialog_logout_btn">로그아웃</string>
    <string name="edit_nickname_txt">닉네임</string>
    <string name="edit_nation_txt">국적</string>
    <string name="edit_intro_txt">소개</string>
    <string name="edit_save_btn">저장</string>
    <string name="item_main_post_username_hint">사용자명</string>
    <string name="item_main_post_content_hint">내용</string>
    <string name="item_main_post_more_expand_txt">더보기</string>
    <string name="item_main_post_more_collapse_txt">접기</string>
    <string name="item_main_post_date">30분 전</string>
</resources>